Tried to get the teams to commit, but failed

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,9 @@
 <div class='span-20'>
   <div class='span-5'>
+    <%= render 'index' %>
   </div>
   <div class='span-15'>
+    <% @bracket = @user.bracket %>
+    <%= render :partial => 'brackets/bracket' %>
   </div>
 </div>
