--- a/app/views/teams/_edit.html.erb
+++ b/app/views/teams/_edit.html.erb
@@ -1,3 +1,3 @@
-<%= form_for(@team, remote: true, :format => :json) do |f| %>
-    <%= f.label '('+@team.seed.to_s+')' %><%= f.text_field(:name) %>
+<%= form.fields_for :teams, @team, {hidden: node} do |team_fields| %>
+    <%= team_fields.label '('+@team.seed.to_s+')' %><%= team_fields.text_field :name %>
 <% end %>
