--- a/app/views/teams/_edit.html.erb
+++ b/app/views/teams/_edit.html.erb
@@ -1,3 +1,3 @@
 <%= form.fields_for :teams, @team, {hidden: node} do |team_fields| %>
-    <%= team_fields.label '('+@team.seed.to_s+')' %><%= team_fields.text_field :name %>
+    <%= team_fields.label '('+@team.seed.to_s+')' %><%= team_fields.text_field :name, {class: 'team_name'}%>
 <% end %>
