--- a/app/views/brackets/_game.html.erb
+++ b/app/views/brackets/_game.html.erb
@@ -1,7 +1,7 @@
 <% @game= bracket.lookup_node(node) %>
 <%= content_tag_for(:td, @game, {class: 'game_display'+left_or_right_node(node), data: {node: node}}) do %>
   <% if @game.locked? %>
-    <%= render partial: 'games/show', locals: {form: form, node: node, bracket: bracket} %>
+    <%= render partial: 'games/show', locals: {form: form, node: node, bracket: bracket, bracket_locked: bracket_locked} %>
   <% else %>
     <%= render partial: 'games/edit', locals: {form: form, node: node, bracket: bracket} %>
   <% end %>
