--- a/app/views/games/_show.html.erb
+++ b/app/views/games/_show.html.erb
@@ -3,6 +3,6 @@
                {prompt: choose_winner_or(@game),
                 disabled: :true,
                 node: node,
-                class: 'game_winner force-font'+color_winner(@game, node, bracket),
+                class: 'game_winner force-font'+color_winner(@game, node, bracket_locked),
                 id: 'game_'+node}
 %>
