--- a/app/assets/stylesheets/layout/screen.css
+++ b/app/assets/stylesheets/layout/screen.css
@@ -182,8 +182,8 @@ td.right_connect {
 }
 
 .grey_winner_state {
-    background-color: #dddddd;
-    color: #444444
+    background-color: #ffffff;
+    color: #111111
 }
 
 .green_winner_state {
