--- a/app/views/brackets/_game.html.erb
+++ b/app/views/brackets/_game.html.erb
@@ -1,5 +1,5 @@
 <% @game= bracket.lookup_node(node) %>
-<%= content_tag_for(:td, @game, {class: 'game_display'+left_or_right_node(node), data: {node: node}}) do %>
+<%= content_tag_for(:td, @game, {class: 'game_display'+left_or_right_node(node)+color_winner(@game, node, bracket_locked), data: {node: node}}) do %>
   <% if @game.locked? %>
     <%= render partial: 'games/show', locals: {form: form, node: node, bracket: bracket, bracket_locked: bracket_locked} %>
   <% else %>
