don't compile assets fix nil debugging, that probably isn't necessary anymore.... App seems working, but there's one bug in the tests that may mask a bug in the invite process -- fix tests to be more modular to identify this later

--- a/app/assets/stylesheets/nav_bar.css
+++ b/app/assets/stylesheets/nav_bar.css
@@ -1,24 +1,22 @@
-$nav-list-heigth: 40px;
-$nav-list-width: 200px;
 nav {
   background-color:#222222;
 }
 .nav-list
 {
   list-style-type:none;
-  height: $nav-list-heigth;
+    height: 40px;
 }
 .nav-list-item
 {
   display:inline;
   float:left;
-  width: $nav-list-width;
-  height: $nav-list-heigth;
+    width: 200px;
+    height: 40px;
 }
 .nav-list-button {
   display:block;
-  width:$nav-list-width;
-  height: $nav-list-heigth;
+    width: 200px;
+    height: 40px;
   text-align:center;
   padding:10px;
 }
@@ -27,14 +25,14 @@ nav {
   color:#afafaf;
   text-decoration:none;
   text-transform:uppercase;
-  height: $nav-list-heigth;
+    height: 40px;
 }
 
 .nav-list-button:hover,.nav-list-button:active
 {
   color: #eeee00;
   background-color:#444444;
-  height: $nav-list-heigth;
+    height: 40px;
 }
 
 .nav-list-item.last {
