--- a/app/views/brackets/_bracket.html.erb
+++ b/app/views/brackets/_bracket.html.erb
@@ -103,7 +103,7 @@
       <td></td>
       <td></td>
       <td></td>
-      <td></td>
+      <td class='center force-center'><%= @user.name %></td>
       <td></td>
       <td></td>
       <td></td>
@@ -122,7 +122,7 @@
       <td></td>
       <td></td>
       <td></td>
-      <td></td>
+      <td class='center force-center'><%= @bracket.current_score.to_s %></td>
       <td></td>
       <td></td>
       <td></td>
