--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -14,7 +14,7 @@
 
     <p class="text-right">
       <%= f.label :password %>
-      <%= f.password_field :password %>
+      <%= f.password_field :password, autofocus: true %>
       </p>
 
     <p class='center'>
