Minor test and format changes.

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -7,8 +7,8 @@
 <p>Welcome to Alia's Madness, <%= @user.name %></p>
 
 <p>
-  To complete your bracket, you must follow *this* link: <%= @url %> and enter this value:
-  <%= @r %>
+  To complete your bracket, you must follow *this* link: <%= @url %>
+  <br>and enter this value: <%= @r %>
 </p>
 
 <p>
