Make it easy for the admin to see that the players have finished their brackets.

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td class="player_summary">
-    <%= user.name+" == "+user.current_score.to_s %>
-  </td>
+  <%= content_tag :td, class: 'player_summary'+bracket_complete_class(user, @user.admin?) do %>
+    <%= user.name+' == '+user.current_score.to_s %>
+  <% end %>
 </tr>
