--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,15 +10,15 @@
                               class: 'nav-list-button' %>
                 </li>
                 <li class='nav-list-item'>
-                  <%= link_to 'Edit Bracket', user_path,
+                  <%= link_to 'Edit Bracket', user_path(@user.id),
                               class: 'nav-list-button' %>
                 </li>
                 <li class='nav-list-item'>
-                  <%= link_to 'Send Message', user_path,
+                  <%= link_to 'Send Message', new_admin_message_path,
                               class: 'nav-list-button' %>
                 </li>
                 <li class='nav-list-item'>
-                  <%= link_to 'View Scenarios', user_path,
+                  <%= link_to 'View Scenarios', 'not/a/real/path',
                               class: 'nav-list-button' %>
                 </li>
             <% end %>
