--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,11 @@
 <body>
 <%= render 'layouts/header' %>
 <div>
-  <% flash.each do |key, value| %>
-    <%= content_tag(:div, value, class: "div #{key}") %>
-  <% end %>
+  <div id='messages'>
+    <% flash.each do |key, value| %>
+      <%= content_tag(:div, value, class: "div #{key}") %>
+    <% end %>
+  </div>
   <%= yield %>
   <%= render 'layouts/footer' %>
   <%= debug(params) if Rails.env.development? %>
