make users clickable

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,5 +1,9 @@
 <tr>
   <%= content_tag :td, class: 'player_summary'+bracket_complete_class(user, @user.admin?) do %>
-    <%= user.name+' == '+user.current_score.to_s %>
+    <%= link_to user_url user.id do %>
+      <div id="clickable">
+        <%= user.name+' == '+user.current_score.to_s %>
+      </div>
+    <% end %>
   <% end %>
 </tr>
