clean up the formatting for clickable users: make class of div clickable for everyone, turn off brackets_complete for admin once brackets_locked.

--- a/app/assets/stylesheets/layout/screen.css
+++ b/app/assets/stylesheets/layout/screen.css
@@ -213,5 +213,8 @@ td.right_connect {
     border-color: #E85200;
 }
 
-#clickable {
+.clickable {
+    background: #CCE6FF;
+    color: #0066cc;
+    border: #0061BD;
 }
