All tests working, and a lot of trimming to come once we run coverage

--- a/app/views/brackets/_game.html.erb
+++ b/app/views/brackets/_game.html.erb
@@ -5,5 +5,5 @@
              locals: {form: form,
                       node: node,
                       bracket: bracket,
-                      bracket_locked: bracket_locked} %>
+                      is_disabled: is_disabled} %>
 <% end %>
