Show the email address when expanding the "Contact" button Changes to support coverage Add a scenario for locking brackets Minor refactoring

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
                           class: 'nav-list-button' %>
             </li>
             <li class='nav-list-item'>
-              <%= link_to 'View Scenarios', user_path(id: @user.id),
+              <%= link_to 'View Scenarios', admin_scenarios_path,
                           class: 'nav-list-button' %>
             </li>
           <% end %>
