Get the tests working after updates to 5.2.3

--- a/app/views/brackets/_bracket.html.erb
+++ b/app/views/brackets/_bracket.html.erb
@@ -121,7 +121,7 @@
       <td></td>
       <td></td>
       <td></td>
-      <td class='center force-center'><%= @user.current_score.to_s %></td>
+      <td class='center force-center'> <% unless @user.admin? %> <%= @user.current_score.to_s %> <% end %> </td>
       <td></td>
       <td></td>
       <td></td>
