--- a/app/views/heckles/_heckle.html.erb
+++ b/app/views/heckles/_heckle.html.erb
@@ -1,3 +1,3 @@
-<div class=“heckles”>
-  <p><%= heckler(heckle.from_id) %> <%= tag_targets(heckle) %></p>
-</div>
+<%= content_tag_for(:div, heckle, {class: 'heckles', style: color_div_if_sender(this_user, heckle)}) do %>
+  <p><%= heckler(heckle.from_id)%> <%= tag_targets(heckle) %></p>
+<% end %>
