--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -9,7 +9,7 @@
       <%= f.text_field :email %>
     </p>
 
-    <p class="text-right">
+    <p class="text-right" id="login_password">
       <%= f.label :password %>
       <%= f.password_field :password %>
     </p>
@@ -18,5 +18,4 @@
       <%= f.submit "Login", class: 'btn btn-large btn-primary' %>
     </p>
   <% end %>
-
 </div>
