save away these changes to do other work elsewhere.
Current state of the chat window is that backspacing will screw up the node hierarchy, and a solution that uses a stack that relates '@' locations to their corresponding HTML nodes will be necessary, and an attempt to fix that caused it to get worse by mucking up the innerHTML in far worse ways.

--- a/app/views/brackets/chats/_chat_to_send.html.erb
+++ b/app/views/brackets/chats/_chat_to_send.html.erb
@@ -1,7 +1,7 @@
 <div id="chat-to-send-container">
   <div id="chat-send">
     <label for="chat-send">Send</label>
-    <div id="chat-text" contenteditable="true" data-uid="<%= user.id %>"
+    <div class='autocomplete' id="chat-text" contenteditable="true" data-uid="<%= user.id %>"
          data-chat-name-lookup="<%= chat_names_as_json %>">
     </div>
   </div>
