--- a/app/views/brackets/chats/_chat_to_send.html.erb
+++ b/app/views/brackets/chats/_chat_to_send.html.erb
@@ -1,6 +1,6 @@
 <div id="chat-to-send-container">
   <div id="chat-send">
-    <label for="chat-send">Send</label>
+    <label for="chat-text">Send</label>
     <div class='autocomplete' id="chat-text" contenteditable="true" data-uid="<%= user.id %>"
          data-chat-name-lookup="<%= chat_names_as_json %>">
     </div>
