--- a/app/views/heckles/_heckle.html.erb
+++ b/app/views/heckles/_heckle.html.erb
@@ -1,3 +1,3 @@
-<%= content_tag_for(:div, heckle, {class: color_div_if_sender(this_user, heckle)}) do %>
-  <p><%= heckler(heckle.from_id)%> <%= tag_targets(heckle) %></p>
+<%= content_tag_for(:div, heckle, {class: 'heckles', 'data-sid' => heckle.from_id }) do %>
+  <p><%= heckler(heckle.from_id)%> <%= heckle.content %></p>
 <% end %>
