completed heckle forum minus a proper test

--- a/app/views/brackets/_bracket.html.erb
+++ b/app/views/brackets/_bracket.html.erb
@@ -986,11 +986,11 @@
       <td class='right_connect'></td>
       <td></td>
       <td class='right_connect'></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td class='chat-width-marker'></td>
+      <td class='chat-width-marker'></td>
+      <td class='chat-width-marker'></td>
+      <td class='chat-width-marker'></td>
+      <td class='chat-width-marker'></td>
       <td class='left_connect'></td>
       <td></td>
       <td class='left_connect'></td>
