--- a/app/views/brackets/chats/_chats_received.html.erb
+++ b/app/views/brackets/chats/_chats_received.html.erb
@@ -1,7 +1,7 @@
 <div id="chats-received-container">
   <label for="chats-received">Rec'd</label>
   <div id="chats-received">
-    <%= render partial: 'heckles/heckle', collection: heckles, as: :heckle, locals: {this_user: user} %>
+    <%= render partial: 'heckles/heckle', collection: heckles, as: :heckle %>
     <div id="chat-anchor"></div>
   </div>
 </div>
