Fix mail text from weird haml translation problem.

--- a/app/views/user_mailer/welcome_email.html.haml
+++ b/app/views/user_mailer/welcome_email.html.haml
@@ -7,9 +7,7 @@
       Welcome to Alia's Madness, #{@user.name}
     %p
       To complete your bracket, you must follow *this* link: #{@url}
-      = succeed "and" do
-        %br/
-      = @r
+      and copy and paste this password into the password field: #{@r}
     %p
     %ul
       %li The link points to your login page.
