placeholder while doing other things. added a web socket channel to allow game changes to be immediately reflected on the server. added front end code to access that channel, and to do the front end updates along the way. somehow there was a bug introduced where descendant nodes that don't have the right winner are nevertheless modified.

--- a/app/views/brackets/_game.html.haml
+++ b/app/views/brackets/_game.html.haml
@@ -1,5 +1,6 @@
 - @game = bracket.lookup_node(node)
-= content_tag_for(:td, @game, {class: build_game_class(@game, node, bracket_locked), data: {node: node}}) do
+-# in the following line, game_update: becomes 'game-update' in the html....
+= content_tag_for(:td, @game, {class: build_game_class(@game, node, bracket_locked), data: {node: node, game_update: @game.channel}}) do
   .winner= game_winner(node, is_disabled, bracket)
   -# = render partial: 'games/winner', locals: {form: form, node: node, bracket: bracket, is_disabled: is_disabled}
   -# if the line above is used instead of the line above that, then _winner.html.haml should contain
