Updates for Rails 7 and related.

--- a/app/views/user_mailer/welcome_email.html.haml
+++ b/app/views/user_mailer/welcome_email.html.haml
@@ -15,5 +15,5 @@
       %li Enter the password and login.
       %li
         Once all brackets are complete, this link will display the list of players, their scores, and how you're doing
-        game-by-game.
+        game-by-game, and you'll be able to see the other players' choices and scoring by clicking through.
     %p Thanks for joining and good luck!
