--- a/app/views/admin/users/_user.html.haml
+++ b/app/views/admin/users/_user.html.haml
@@ -1,4 +1,4 @@
-%tr
+%tr.clickable
   = content_tag :td, class: 'player_summary'+bracket_complete_class(user, @user.admin?) do
     = link_to user_url user.id do
       = div_for @user, {class: clickable(user)} do
