--- a/app/views/brackets/chats/_chats_received.html.haml
+++ b/app/views/brackets/chats/_chats_received.html.haml
@@ -1,6 +1,6 @@
 #chats-received-container
-  %label{for: "chats-received"}
-    Rec'd
-    #chats-received{contenteditable: "false"}
-      = render partial: 'heckles/heckle', collection: heckles, as: :heckle
-      #chat-anchor
+  -# %label{for: "chats-received"}
+  -#   Rec'd
+  -#   #chats-received{contenteditable: "false"}
+  -#     = render partial: 'heckles/heckle', collection: heckles, as: :heckle
+  -#     #chat-anchor
