--- a/config/cable.yml.erb
+++ b/config/cable.yml.erb
@@ -1,12 +1,12 @@
-redis: &default
-  adapter: redis
-  url: <%= ENV['REDIS_URL'] %>
+#redis: &default
+#  adapter: redis
+#  url: <%#= ENV['REDIS_URL'] %>
 
-production:
-  channel_prefix: AliasMadness_production
-  adapter: redis
-  url: <%= ENV['REDIS_URL'] %>
-
-development: *default
-test:
-  adapter: async
+#production:
+#  channel_prefix: AliasMadness_production
+#  adapter: redis
+#  url: <%#= ENV['REDIS_URL'] %>
+# /etc/ssl/certs/ca-certificates.crt
+#development: *default
+#test:
+#  adapter: async
